<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calzado Atlas SA</string>
    <string name="action_settings">Menú Princial</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Usuario</string>
    <string name="password">Clave</string>
    <string name="enter">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="title_activity_activar_visita">Calzado Atlas SA - Activar Visitas</string>
    <string name="tipoVisita">Tipo Visita</string>
    <string name="estadoVisita">Estado Visita</string>
    <string name="filtrar">Filtrar</string>
    <string name="tituloListaVisitas">Visitas</string>
    <string name="menu_settings">Menú Principal</string>
    <string name="title_activity_menu_principal">Calzado Atlas SA</string>
    <string name="registrarPedido">Registrar Pedido</string>
    <string name="registrarCobranza">Registrar Cobranza</string>
    <string name="registrarDeposito">Registrar Deposito</string>
    <string name="loginFail">Usuario o Clave Incorrectos</string>
    <string name="title_activity_registrar_pedidos">Calzado Atlas SA - Registrar Pedidos</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="pedidos">Pedidos</string>
    <string name="nroPedido">Número de Pedido ...</string>
    <string name="blanco"></string>
    <string name="title_activity_nuevo_pedido">Calzado Atlas SA - Nuevo Pedido</string>
    <string name="formaPago">Forma de Pago</string>
    <string name="direccionEnvio">Dirección de Envío</string>
    <string name="EmpresaTransporte">Empresa de Transporte</string>
    <string name="Instrucciones">Instrucciones</string>
    <string name="aceptaRetenido">¿Acepta que el pedido ingrese retenido?</string>
    <string name="estado">Estado</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="detalles">Ver Detalles</string>
    <string name="title_activity_detalle_pedido">Calzado Atlas SA - Detalle de Pedido</string>
    <string name="agregarProducto">Agregar Producto</string>
    <string name="resumen">Resumen</string>
    <string name="lblcodprod">COD:</string>
    <string name="lblPunit">P. Unit:</string>
    <string name="lblImporte">Imp:</string>
    <string name="title_activity_agregar_producto">Calzado Atlas SA - Agregar Productos</string>
    <string name="producto">Producto</string>
    <string name="Punit">Punit:</string>
    <string name="impTotal">"Importe Total : "</string>
    <string name="cod">"Cod: "</string>
    <string name="agregarTalla">Agregar Talla</string>
    <string name="tallasSeleccionadas">Tallas Seleccionadas</string>
    <string name="agregar">Agregar</string>
    <string name="visita">Visita:</string>
    <string name="title_activity_buscar_producto">Calzado Atlas SA - Buscar Productos</string>
    <string name="buscarProducto">Buscar Producto</string>
    <string name="Productos">Productos</string>
    <string name="title_activity_agregar_talla">Calzado Atlas SA - Agregar Tallas</string>
    <string name="talla">Talla</string>
    <string name="existencias">Existencias</string>
    <string name="cantidad">Cantidad</string>
    <string name="seleccionarTalla">Seleccionar Talla</string>
    <string name="title_activity_buscar_talla">BuscarTalla</string>
    <string name="buscarTalla">Buscar Talla...</string>
    <string name="title_activity_test_url">TestURLActivity</string>
    <string name="title_activity_prueba_web_service">PruebaWebServiceActivity</string>
    <string name="title_activity_registrar_cobranzas">Calzado Atlas SA - Registrar Cobranzas</string>
    <string name="btnNuevaCobranza">Nueva Cobranza</string>
    <string name="title_activity_nueva_cobranza">Calzado Atlas SA - Nueva Cobranza</string>
    <string name="importe">Importe</string>
    <string name="medioPago">Medio Pago</string>
    <string name="detalleCobranza">Detalle de la Cobranza</string>
    <string name="autoDistribuir">Auto Distribuir</string>
    <string name="title_activity_detalle_cobranza">Calzado Atlas SA - Detalle de Cobranza</string>
    <string name="documentosIncluidosCobranza">Documentos Incluidos en la Cobranza</string>
    <string name="agregarDocumentos">Agregar Documentos</string>
    <string name="title_activity_agregar_documentos">Calzado Atlas SA - Agregar Documentos</string>
    <string name="tipoDocumento">Tipo Documento</string>
    <string name="documentoPago">Documento de Pago: </string>
    <string name="fechaVencimiento">Fecha Vencimiento: </string>
    <string name="ImportePendiente">"Importe Pendiente: "</string>
    <string name="importeAmortizar">Importe a Amortizar: </string>
    <string name="title_activity_buscar_documento_pago">Calzado Atlas SA - Buscar Documentos</string>
    <string name="buscarDocumento">Buscar Documento</string>
    <string name="title_activity_registrar_depositos">Calzado Atlas SA - Registrar Depositos</string>
    <string name="nuevoDeposito">Nuevo Depósito</string>
    <string name="depositos">Depósitos</string>
    <string name="buscarDeposito">Buscar Depósito ...</string>
    <string name="title_activity_nuevo_deposito">Calzado Atlas SA - Registrar Deposito</string>
    <string name="banco">Banco</string>
    <string name="voucher">Voucher</string>
    <string name="ruta_servicio">http://172.24.3.15:82/servicio/Servicios.asmx</string>
    <string name="activarVisitas">Activar Visitas</string>
    <string name="title_activity_buscar_empresa_transporte">Calzado Atlas SA - Buscar Empresa de Carga</string>
    <string name="buscarEmpTrans">Buscar Empresa de Carga ...</string>
    <string name="title_activity_test_graphic">TestGraphicActivity</string>
    <string name="reset_button">Reset</string>
    <string name="btn_testGraphic">Test Graphic</string>
    <string name="title_activity_reporte_pedido">Calzado Atlas SA - Orden de Pedido</string>
    <string name="lblImprimir">Imprimir</string>
    <string name="title_activity_reporte_cobranza">Calzado Atlas SA - Recibo de Cobranza</string>
    <string name="imprimir">Imprimir</string>

</resources>