<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtVisitaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/txtCLientePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanco" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevo" />

    <EditText
        android:id="@+id/txtFiltrarPedidos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nroPedido"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnFiltrarPedidos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pedidos" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>