<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblNroCobranzaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/lblVisitaNuevaCobranza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/lblClienteNuevaCobranza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanco" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/lblNumeroPedidoDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado" />

    <Spinner
        android:id="@+id/cmbEstadoNuevaCobranza"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblImporteOriginalRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importe" />

    <EditText
        android:id="@+id/txtImporteCobranzaNueva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblImportePendienteRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medioPago" />

    <Spinner
        android:id="@+id/cmbMedioPagoNuevaCobranza"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        >
        
        <Button
        android:id="@+id/btnCancelarCobranza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" 
         android:drawableRight="@android:drawable/ic_menu_delete" 
         android:gravity="center_horizontal"/>

        <Button
        android:id="@+id/btnGuardarCobranza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:drawableRight="@android:drawable/ic_menu_save"  
        android:gravity="center_horizontal"/>
    </LinearLayout>

    
    
     <Button
         android:id="@+id/btnDetalleCobranza"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/detalleCobranza" 
         android:drawableLeft="@android:drawable/ic_input_add" />
     
      <Button
          android:id="@+id/btnAutoDistribuirCobranza"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/autoDistribuir"
          android:drawableLeft="@android:drawable/stat_notify_sync_noanim" />
      
       <Button
           android:id="@+id/btnRegistrarDepositoCobranza"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/registrarDeposito" 
           android:drawableLeft="@android:drawable/stat_sys_download" />
    
        </LinearLayout>
    </ScrollView>

    

</LinearLayout>