    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblClientePedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnActivarVisitas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_activar_visita" />

        <Button
            android:id="@+id/btnRegistrarPedido"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarPedido" />

        <Button
            android:id="@+id/btnRegistrarCobranza"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarCobranza" />

        <Button
            android:id="@+id/btnRegistrarDeposito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarDeposito" />

        <TextView
            android:id="@+id/lblUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="TextView" />

    </LinearLayout>
