<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblClientePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoVisita" />

    <Spinner
        android:id="@+id/cmbTipoVisita"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtVisitaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadoVisita" />

    <Spinner
        android:id="@+id/cmbEstadoVisita"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar" />

    <TextView
        android:id="@+id/txtCodigoVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tituloListaVisitas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>
   
    

</LinearLayout>