<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarProductoActivity" >

    <TextView
        android:id="@+id/lblNroPedidoAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNroPedidoAgregarProducto"
        android:text="@string/producto" />

    <EditText
        android:id="@+id/txtProductoAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbl1"
        android:editable="false"
        android:ems="10"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnBuscarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtProductoAgregar"
        android:layout_alignBottom="@+id/txtProductoAgregar"
        android:layout_toRightOf="@+id/txtProductoAgregar"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/lblNumeroTallaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtProductoAgregar"
        android:layout_below="@+id/txtProductoAgregar"
        android:text="@string/cod" />

    <TextView
        android:id="@+id/lblCodProductoAgregarProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBuscarProducto"
        android:layout_toRightOf="@+id/lblNumeroTallaPedido"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/lblPunitAgregarProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblCodProductoAgregarProd"
        android:layout_alignBottom="@+id/lblCodProductoAgregarProd"
        android:layout_alignRight="@+id/btnBuscarProducto"
        android:text="@string/blanco" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblPunitAgregarProd"
        android:layout_alignBottom="@+id/lblPunitAgregarProd"
        android:layout_toLeftOf="@+id/lblPunitAgregarProd"
        android:text="@string/Punit" />

    <TextView
        android:id="@+id/lblExistenciasTallaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:text="@string/impTotal" />

    <TextView
        android:id="@+id/lblImporteTotalAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblExistenciasTallaPedido"
        android:layout_alignBottom="@+id/lblExistenciasTallaPedido"
        android:layout_toRightOf="@+id/lblExistenciasTallaPedido"
        android:text="@string/blanco" />

    <Button
        android:id="@+id/btnAgregarTallaAgregarProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblExistenciasTallaPedido"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:text="@string/agregarTalla" />

    <TextView
        android:id="@+id/lblImporteTallaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAgregarTallaAgregarProd"
        android:layout_centerHorizontal="true"
        android:text="@string/tallasSeleccionadas" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblExistenciasTallaPedido"
         android:layout_below="@+id/lblImporteTallaPedido"
        >
    </ListView>

</RelativeLayout>